--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.0.0.RELEASE</version>
+		<version>1.5.14.RELEASE</version>
 	</parent>
 
 	<dependencies>
@@ -37,8 +37,8 @@
 		</dependency>
 		<dependency>
 			<groupId>org.apache.ignite</groupId>
-			<artifactId>ignite-spring-data_2.0</artifactId>
-			<version>2.7.0-SNAPSHOT</version>
+			<artifactId>ignite-spring-data</artifactId>
+			<version>2.6.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.ignite</groupId>
