--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,12 @@
 			<groupId>org.apache.ignite</groupId>
 			<artifactId>ignite-rest-http</artifactId>
 			<version>2.6.0</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.slf4j</groupId>
+					<artifactId>slf4j-log4j12</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.ignite</groupId>
